# dotbot-brew

./: LICENSE  README.md  README.org  brew.py  pyproject.toml  test
examples/macos/: example.yaml
