[tool.poetry]
name = "dotbot-brew"
version = "0.1.0"
description = "Homebrew plugin for Dotbot"
authors = ["Jonathan Wren <jonathan@nowandwren.com>"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

